<resources>
    <string name="app_name">Password Manager</string>
    <string name="about1">To add a password, simply type in the text-field and press ADD.\nTo remove a password, simply tap on it.</string>
    <string name="about2">This app is currently in beta version, supports only up to max.8 passwords.</string>
    <string name="exit">Exit</string>
    <string name="add">Add</string>
    <string name="about">About</string>
    <string name="_3">3.</string>
    <string name="_2">2.</string>
    <string name="_1">1.</string>
    <string name="author">This app is made by #devashish</string>
    <string name="about_">About :</string>
    <string name="export">Export</string>
    <string name="thank_you">Thank you for using this application!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirmation">Are you sure you want to close this app ?</string>
    <string name="task_added">Password successfully added :)</string>
    <string name="overflow_flow">Overflow error :(</string>
    <string name="completed"> removed!</string>
    <string name="thanks_permission">Thank you for granting the Permission :)</string>
    <string name="sorry_permission">Sorry, but we need Storage Permission for Exporting Files</string>
    <string name="request_permission">We need Storage Permission for Exporting Files</string>
    <string name="enter_master_password">Enter your master password :</string>
    <string name="enter">Enter</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="change">Change</string>
    <string name="password_changing">Password Changing :</string>
</resources>
